--- a/index.html
+++ b/index.html
@@ -83,8 +83,43 @@
             </div>
          </section>
     </header>
-    <main>
-
+    <main class="bg-[#f4f4f4]">
+        <div class="ml-40 hidden lg:inline-block">
+            <img src="assets/Vector.png" alt="">
+        </div>
+        <!-- Design Section -->
+         <section class="container px-10 lg-px-1 mx-auto flex flex-col lg:flex-row gap-10 ">
+            <!-- Text Content -->
+             <div class="space-y-9 mb-14 text-center lg:text-left mt-10 lg:mt-0">
+                <button class="btn bg-[#FFFFFF] rounded-full px-4"><i class="fa-solid fa-arrow-right"></i> About Us</button>
+                <h2 class="text-2xl lg:text-4xl font-extrabold">We design thoughtful, liveable spaces</h2>
+                <p class="text-base">The barn house captivates with its blend of rustic charm and 
+                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <!-- Commercial -->
+                <div class="flex p-6 bg-white gap-5 items-center rounded-lg ">
+                    <div>
+                        <img src="assets/commercial.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-bold">Commercial</h3>
+                        <p class="text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <div class="flex p-6 bg-white gap-5 items-center rounded-lg">
+                    <div>
+                        <img src="assets/residential.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-bold">Residential</h3>
+                        <p class="text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+             </div>
+             <!-- Image Content -->
+              <div >
+                <img src="assets/Rectangle.png" alt="">
+              </div>
+         </section>
     </main>
 </body>
 </html>
