--- a/index.html
+++ b/index.html
@@ -178,6 +178,59 @@
              </div>
              <!-- card section -->
           </section>
+          <!-- Our protfolio -->
+           <section class="container mx-auto">
+            <div class="text-center space-y-7 pb-10">
+                <button class="btn bg-[#ABEF5F33] rounded-full px-5"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
+                <h2 class="text-2xl lg:text-4xl font-extrabold">Our Latest Portfolio</h2>
+                <p class="text-base">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>  
+            <!--  -->
+            <div class="container mx-auto py-12">
+                <!-- Section Header -->
+                <!-- <div class="text-center mb-10">
+                  <h2 class="text-3xl font-bold">Our Latest Portfolio</h2>
+                  <p class="text-lg text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div> -->
+              
+                <!-- Grid Layout -->
+               <div class="grid grid-cols-1 lg:grid-cols-5 gap-5">
+                <div class="lg:col-span-4 p-6 border-2 rounded-lg border-solid">
+                    <div class="flex lg:flex-row flex-col gap-5">
+                        <div>
+                            <img class="w-full"  src="assets/img1.png" alt="">
+                        </div>
+                        <div class="space-y-5">
+                            <h3 class="text-xl font-bold">Commercial</h3>
+                            <p class="text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                            <button class=" rounded-full    "> <span class="pr-2">View Details</span>  <i class="fa-solid fa-arrow-right  bg-[#ABEF5F]  p-2 rounded-full -rotate-45"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class=" p-6 border-2 rounded-lg border-solid">
+                    <img src="assets/img2.png" alt="">
+                </div>
+                <div class=" p-6 border-2 rounded-lg border-solid w-full">
+                    <img class="w-full" src="assets/img3.png" alt="">
+                </div>
+                <div class="lg:col-span-3 p-6 border-2 rounded-lg border-solid">
+                    <div class="flex lg:flex-row flex-col gap-5">
+                    <div class="h-[170px]">
+                        <img class="w-full h-full"  src="assets/img4.png" alt="">
+                    </div>
+                    <div class="space-y-5">
+                        <h3 class="text-xl font-bold">Commercial</h3>
+                        <p class="text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <button class=" rounded-full    "><span class="pr-2">View Details</span> <i class="fa-solid fa-arrow-right  bg-[#ABEF5F]  p-2 rounded-full -rotate-45"></i></button>
+                    </div>
+                </div>
+            </div>
+                <div class=" p-6 border-2 rounded-lg border-solid">
+                    <img class="w-full"  src="assets/img5.png" alt="">
+                </div>
+               </div>
+              
+           </section>
     </main>
 </body>
 </html>
