addded mail section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
          </section>
     </header>
-    <main class="bg-[#f4f4f4] mb-20">
+    <main class="bg-[#f4f4f4] mb-5">
         <div class="ml-40 hidden mt-5 lg:inline-block">
             <img src="assets/Vector.png" alt="">
         </div>
@@ -232,5 +232,25 @@
               
            </section>
     </main>
+    <!-- login Section
+      -->
+    <section class="bg-[url('assets/bg.jpg')] bg-no-repeat bg-cover">
+        <div class="container mx-auto py-24">
+            <div class="text-center space-y-7 pb-10">
+                <button class="btn bg-[#ABEF5F33] rounded-full px-5"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
+                <h2 class="text-2xl lg:text-4xl font-extrabold">Our Latest Portfolio</h2>
+                <p class="text-base">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>  
+            <div class="text-center space-y-7 space-x-1">
+                <input type="text" placeholder="First Name*" class="input input-bordered rounded-full w-full max-w-xs" />
+                <input type="text" placeholder="Last Name*" class="input input-bordered rounded-full w-full max-w-xs" /> <br>
+                <input type="text" placeholder="Phone Number*" class="input input-bordered rounded-full w-full max-w-xs" />
+                <input type="text" placeholder="Email*" class="input input-bordered rounded-full w-full max-w-xs" /> <br>
+                <textarea class="textarea w-9/12 lg:w-5/12 h-[240px] rounded-lg" placeholder="Write Your Massage Here"></textarea> <br>
+                <button class="btn rounded-full w-9/12 lg:w-5/12   bg-[#ABEF5F]">Send Email <i class="fa-solid fa-arrow-right text-white bg-[#1C1C1C]  p-2 rounded-full -rotate-45"></i></button>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
