--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header class="container mx-auto  ">
         <nav>
-            <div class="navbar bg-base-100">
+            <div class="navbar bg-base-100 px-3">
                 <div class="navbar-start">
                     <i class="fa-solid fa-arrow-right bg-[#ABEF5F] p-2 rounded-full -rotate-45"></i>
                   <a class="btn btn-ghost text-2xl font-extrabold ">Rinterio</a>
